worked on the collapsable faq section and styled it accordingly, yet to fix the minor error

--- a/style.css
+++ b/style.css
@@ -8,11 +8,11 @@
 body {
     font-family: Roboto, sans-serif;
 }
-
-/* styling the main container */
-
-.main-container {
-    background-image: url("./ASSETS/background_image.jpg");
+/* 
+.back {
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url ("./ASSETS/background_image.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -21,14 +21,75 @@ body {
     width: 99vw;
     margin-top: -8px;
     margin-left: -8px;
+   
+} */
+
+/* .curve-in {
+    height: 10vh;
+    width: 100vw;
+    background: linear-gradient(to right,black,rgb(255, 0, 204),red,rgb(255, 0, 204), black);
+    position: relative;
+    top: 90%;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+} */
+
+/* .curve-out {
+    height: 90%;
+    width: 100%;
+    background: radial-gradient(ellipse at 50% 0, blue, black 50%);
+    position: absolute;
+    top: 10%;
+    border-top-left-radius: 45%;
+    border-top-right-radius: 45%;
+} */
+
+/* styling the curve */
+
+.hero {
+    position: relative;
+    width: 1344px;
+    height: 50px;
+    overflow: hidden;
+    position: relative;
+    margin-left: -8px;
+    background: #000;
 }
 
 
 
-.main-container img {
-    width: 300px;
-    height: 90px;
-    margin-top: 1px;
+.netflix-curve {
+    position: absolute;
+    width: 130%;
+    height: 200px;
+    top: 10px;
+    margin-left: 1px;
+    border-top: 4px solid #e50914;
+    border-radius: 90%;
+    box-shadow: 0px -10px 20px rgba(229, 9, 20, 0.4);
+}
+
+/* styling the main container */
+
+.main-container {
+    background-image:url("./ASSETS/background_image.jpg"); 
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: white;
+    height: 98vh;
+    width: 99vw;
+    margin-top: -8px;
+    margin-left: -8px;
+    
+} 
+
+
+
+.main-container .logo img {
+    width: 20vw;
+    height: 20vh;
+    margin-top: px;
 }
 
 .nav-items {
@@ -41,6 +102,7 @@ body {
     background-color: red;
     border-radius: 8px;
     margin-right: 50px;
+    margin-top: -90px;
     width: 80px;
     height: 40px;
 }
@@ -117,13 +179,8 @@ form {
     margin-top: -22px;
     margin-left: -10px;
     margin-right: -9px;
+    height: 1000px;
 }
-
-.border-line {
-    border-top: white solid 1px;
-    border-radius: 80px;
-}
-
 
 .card-wrapper {
     margin: 5px;
@@ -136,8 +193,8 @@ form {
     bottom: 0;
     left: 0;
     z-index: 10;
-    color: white;
-    font-size: 40px;
+    color: black;
+    font-size: 80px;
 }
 
 .card2 {
@@ -145,8 +202,8 @@ form {
     bottom: 0;
     left: 0;
     z-index: 10;
-    color: white;
-    font-size: 40px;
+    color: black;
+    font-size: 80px;
 }
 
 .card3 {
@@ -154,8 +211,8 @@ form {
     bottom: 0;
     left: 0;
     z-index: 10;
-    color: white;
-    font-size: 40px;
+    color: black;
+    font-size: 80px;
 }
 
 .card4 {
@@ -163,8 +220,8 @@ form {
     bottom: 0;
     left: 0;
     z-index: 10;
-    color: white;
-    font-size: 40px;
+    color: black;
+    font-size: 80px;
 }
 
 .card5 {
@@ -172,8 +229,8 @@ form {
     bottom: 0;
     left: 0;
     z-index: 10;
-    color: white;
-    font-size: 40px;
+    color: black;
+    font-size: 80px;
 }
 
 .card6 {
@@ -181,8 +238,8 @@ form {
     bottom: 0;
     left: 0;
     z-index: 10;
-    color: white;
-    font-size: 40px;
+    color: black;
+    font-size: 80px;
 }
 
 .card7 {
@@ -190,8 +247,8 @@ form {
     bottom: 0;
     left: 0;
     z-index: 10;
-    color: white;
-    font-size: 40px;
+    color: black;
+    font-size: 80px;
 }
 
 .card8 {
@@ -199,8 +256,8 @@ form {
     bottom: 0;
     left: 0;
     z-index: 10;
-    color: white;
-    font-size: 40px;
+    color: black;
+    font-size: 80px;
 }
 
 .card9 {
@@ -208,8 +265,8 @@ form {
     bottom: 0;
     left: 0;
     z-index: 10;
-    color: white;
-    font-size: 40px;
+    color: black;
+    font-size: 80px;
 }
 
 .card10 {
@@ -217,14 +274,16 @@ form {
     bottom: 0;
     left: 0;
     z-index: 10;
-    color: white;
-    font-size: 40px;
+    color: black;
+    font-size: 80px;
 }
 
 /* styling the trailer-video */
 
 .trailer-video {
     background-color: black;
+    width: ;
+    height: px;
 }
 
 
@@ -287,7 +346,60 @@ form {
     font-size: 20px;
 }
 
+/* styling the collapsable faq-section */
 
+.faq-item {
+    list-style: none;
+    margin-bottom: 8px;
+    width: 100%;
+}
+
+.faq-toggle {
+    display: none;
+}
+
+.faq-label {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 30px;
+    background: #2d2d2d;
+    color: white;
+    font-size: 1.5rem;
+    cursor: pointer;
+    transition: background 0.2s ease;
+}
+
+.faq-label:hover {
+    background: #414141;
+}
+
+.faq-content {
+    max-height: 0;
+    overflow: hidden;
+    background: #2d2d2d;
+    transition: max-height 0.2s cubic-bezier(0.5, 0, 0.1, 1);
+    margin-top: 1px;
+}
+
+.faq-content {
+    padding: 20px 30px;
+    color: white;
+    font-size: 1.2rem;
+}
+
+.faq-toggle:checked ~ .faq-content {
+    max-height: 600px;
+}
+
+.faq-toggle:checked ~ .faq-label .icon{
+    transform: rotate(45deg);
+}
+
+.icon {
+    font-size: 2rem;
+    transition: transform 0.2s ease;
+}
 
 /* styling the joining section */
 
